[gd_scene load_steps=4 format=3 uid="uid://bvvkgk85vgkxv"]

[ext_resource type="Script" path="res://Path.gd" id="1_00p64"]
[ext_resource type="Texture2D" uid="uid://ciejehp5f45qg" path="res://icon.svg" id="1_42cau"]

[sub_resource type="Curve2D" id="Curve2D_prpm1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 122, -31, 0, 0, 0, 0, -7, 253, 0, 0, 0, 0, 311, 68, 0, 0, 0, 0, -45, 63, 0, 0, 0, 0, 236, 259, 0, 0, 0, 0, 122, -31)
}
point_count = 6

[node name="Path" type="Node2D"]
script = ExtResource("1_00p64")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Path2D" type="Path2D" parent="CanvasLayer"]
position = Vector2(306, 114)
scale = Vector2(1.81461, 1.72759)
curve = SubResource("Curve2D_prpm1")

[node name="SpriteFollow" type="PathFollow2D" parent="CanvasLayer/Path2D"]
position = Vector2(122, -31)
rotation = 1.99716
rotates = false
loop = false

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Path2D/SpriteFollow"]
rotation = -1.99716
scale = Vector2(0.245405, 0.239676)
texture = ExtResource("1_42cau")

[node name="ZoneStartFollow" type="PathFollow2D" parent="CanvasLayer/Path2D"]
position = Vector2(122, -31)
rotation = 1.99716
rotates = false
loop = false

[node name="ZoneEndFollow" type="PathFollow2D" parent="CanvasLayer/Path2D"]
position = Vector2(122, -31)
rotation = 1.99716
rotates = false
loop = false
